<resources>
    <string name="app_name">CommunicationFile</string>
    <string name="pls_add_record">please add new record</string>


    <string-array name="priority">
        <item>NORMAL</item>
        <item>URGENT</item>
        <item>CRITICAL</item>
    </string-array>

    <string-array name="status_cc">
        <item>NEW</item>
        <item>CLOSED</item>
        <item>PENDING</item>
        <item>COMPLAINT</item>
    </string-array>

    <string-array name="status_inv">
        <item>NEW</item>
        <item>CLOSED</item>
        <item>REOPEN</item>
    </string-array>

    <string-array name="department">
        <item>dep2</item>
        <item>dep3</item>
        <item>dep4</item>
        <item>dep5</item>
        <item>dep6</item>
        <item>dep7</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="dep1">dep1</string>
    <string name="dep2">dep2</string>
    <string name="dep3">dep3</string>
    <string name="dep4">dep4</string>
    <string name="dep5">dep5</string>
    <string name="dep6">dep6</string>
    <string name="dep7">dep7</string>
    <string name="add_note">ADD</string>
    <string name="save">SAVE</string>
    <string name="ww">dep1</string>
    <string name="closed">CLOSED</string>
    <string name="critical">CRITICAL</string>
    <string name="urgent">URGENT</string>
    <string name="pending">PENDING</string>
    <string name="reopen">REOPEN</string>
    <string name="normal">NORMAL</string>
    <string name="complaint">COMPLAINT</string>
    <string name="NEW">NEW</string>
</resources>
